--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <title>Prueba de envio de correos con GitHub Pages</title>
 </head>
 <body>
-    <form action="">
+    <form action="http://formspree.io/joaquin.p.olivera@gmail.com" method="POST">
+        <input type="email" name="_replyto">
+        <textarea name="body"></textarea>
+        <input type="submit" value="Send">
+    </form>
+
+    <!-- <form action="">
         <label for="correo">Ingresar correo:</label>
         <input type="email" name="" id="correo">
         <input type="button" action="send" value="Enviar"><br><br>
         <button id="btnSendMail">Enviar</button>
-    </form>
+    </form> -->
     
     <script src="App.js"></script>
 </body>
