cambio direccion de form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Prueba de envio de correos con GitHub Pages</title>
 </head>
 <body>
-    <form action="http://formspree.io/joaquin.p.olivera@gmail.com" method="POST">
+    <form action="https://formspree.io/f/xvovwyvr" method="POST">
         <input type="email" name="_replyto">
         <textarea name="body"></textarea>
         <input type="submit" value="Send">
