agrego evento de Form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Prueba de envio de correos con GitHub Pages</title>
 </head>
 <body>
-    <form action="https://formspree.io/f/xvovwyvr" method="POST">
+    <!-- action="https://formspree.io/f/xvovwyvr" -->
+    <form id="formSendMail"  method="POST">
         <label for="txtMail">Su Mail:</label>
         <input id="txtMail" type="email" name="_replyto"><br><br>
         <label for="txtName">Su nombre:</label>
